add periodic signals

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,12 @@
+@inproceedings{yigitbasi2010analysis,
+  title={Analysis and modeling of time-correlated failures in large-scale distributed systems},
+  author={Yigitbasi, Nezih and Gallet, Matthieu and Kondo, Derrick and Iosup, Alexandru and Epema, Dick},
+  booktitle={2010 11th IEEE/ACM International Conference on Grid Computing (GRID)},
+  pages={65--72},
+  year={2010},
+  organization={IEEE},
+}
+
 @inproceedings{da2013toward,
   title={Toward fine-grained online task characteristics estimation in scientific workflows},
   author={da Silva, Rafael Ferreira and Juve, Gideon and Deelman, Ewa and Glatard, Tristan and Desprez, Fr{\'e}d{\'e}ric and Thain, Douglas and Tovar, Benjam{\'\i}n and Livny, Miron},
