fix Ewa's comment and fix scale parameter issue 3. add reference to general solution

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,14 @@
+@article{nadarajah2008review,
+  title={A review of results on sums of random variables},
+  author={Nadarajah, Saralees},
+  journal={Acta Applicandae Mathematicae},
+  volume={103},
+  number={2},
+  pages={131--140},
+  year={2008},
+  publisher={Springer}
+}
+
 @inproceedings{yigitbasi2010analysis,
   title={Analysis and modeling of time-correlated failures in large-scale distributed systems},
   author={Yigitbasi, Nezih and Gallet, Matthieu and Kondo, Derrick and Iosup, Alexandru and Epema, Dick},
