add reference to conjugate prior

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,14 @@
+@article{diaconis1979conjugate,
+  title={Conjugate priors for exponential families},
+  author={Diaconis, Persi and Ylvisaker, Donald and others},
+  journal={The Annals of statistics},
+  volume={7},
+  number={2},
+  pages={269--281},
+  year={1979},
+  publisher={Institute of Mathematical Statistics}
+}
+
 @article{nadarajah2008review,
   title={A review of results on sums of random variables},
   author={Nadarajah, Saralees},
