--- a/ftc.tex
+++ b/ftc.tex
@@ -237,7 +237,7 @@ We have already assumed the task runtime, system overhead, and inter-arrival tim
 $\bm M$ is also a random variable and it includes the system overheads and the runtime of the clustered job and its subsequent retry jobs if the first try fails. We also assume that task failures are independent for each worker node (but with the same distribution) without considering the failures that bring the whole system down such as a failure in the shared file system. 
 %since that is not the concern of task clustering but the task scheduling. 
 
-The runtime of a job is a random variable indicated by $\bm d$. A clustered job succeeds only if all of its tasks succeed. The job runtime is the sum of the cumulative task runtime of $k$ tasks and the system overhead. We assume that the task runtime of each task is independent of each other, therefore the cumulative task runtime of $k$ tasks is also a Gamma distribution since the sum of Gamma distributions with the same scale parameter is still a Gamma distribution. We also assume the system overhead is independent of all the task runtimes. A general solution to express the sum of independent Gamma distributions with different scale and shape parameters is provided in~\cite{nadarajah2008review}. Since that is not our major concern, here we only show a typical case where the system overhead and the task runtime have the same scale parameter ($\theta_{ts}=\theta_{t}=\theta_{s}$). 
+The runtime of a job is a random variable indicated by $\bm d$. A clustered job succeeds only if all of its tasks succeed. The job runtime is the sum of the cumulative task runtime of $k$ tasks and the system overhead. We assume that the task runtime of each task is independent of each other, therefore the cumulative task runtime of $k$ tasks is also a Gamma distribution since the sum of Gamma distributions with the same scale parameter is still a Gamma distribution. We also assume the system overhead is independent of all the task runtimes. A general solution to express the sum of independent Gamma distributions with different scale and shape parameters is provided in~\cite{nadarajah2008review}. Since that is not our major concern, without overcomplicating the task clustering model, we only show a typical case where the system overhead and the task runtime have the same scale parameter ($\theta_{ts}=\theta_{t}=\theta_{s}$). 
 %Don't know how to explain
 %In practice, this assumption means the cumulative task runtime and the system overhead are generated at the same rate (or scale). 
 %which is consistent with our o-DAG model that has one system overhead associated to one job. 
